# voxy-cpp

./: meson.build
assets/: chunk.frag  chunk.vert  entity.frag  entity.vert  light.frag  light.vert  shader.frag  shader.vert  ui.frag  ui.vert  ui_selection.vert  wireframe.frag
assets/character/: idk.bbmodel  idk.mtl  materials.mtl
include/: application.hpp  block.hpp  blocks.hpp  camera.hpp  chunk.hpp  chunk_coords.hpp  chunk_data.hpp  chunk_defs.hpp  chunk_generator.hpp  chunk_info.hpp  chunk_info_generator.hpp  chunk_manager.hpp  chunk_mesh.hpp  coordinates.hpp  debug_renderer.hpp  dimension.hpp  directions.hpp  entity.hpp  gl.hpp  glfw.hpp  lazy.hpp  light.hpp  light_manager.hpp  lights.hpp  mesh.hpp  network.hpp  noise.hpp  perlin.hpp  physics.hpp  player_control.hpp  player_controller.hpp  player_ui.hpp  ray_cast.hpp  resource_pack.hpp  sdl2.hpp  system.hpp  terrain.hpp  text_renderer.hpp  texture.hpp  texture_array.hpp  (+8 more)
include/chunk/: generator.hpp  light_system.hpp  mesher.hpp
include/graphics/: camera.hpp  font.hpp  mesh.hpp  shader_program.hpp  texture.hpp  texture_array.hpp  ui_renderer.hpp  window.hpp  wireframe_renderer.hpp
include/system/: camera_follow.hpp  chunk_generator.hpp  chunk_mesher.hpp  chunk_renderer.hpp  debug.hpp  light.hpp  physics.hpp  player_control.hpp  player_movement.hpp  player_ui.hpp
include/types/: block.hpp  chunk.hpp  chunk_coords.hpp  chunk_defs.hpp  coords.hpp  dimension.hpp  directions.hpp  entity.hpp  world.hpp
resource_pack/: manifest.yaml
src/: application.cpp  blocks.cpp  camera.cpp  chunk.cpp  chunk_data.cpp  chunk_generator.cpp  chunk_info.cpp  chunk_info_generator.cpp  chunk_manager.cpp  chunk_mesh.cpp  debug_renderer.cpp  dimension.cpp  gl.cpp  glfw.cpp  light.cpp  light_manager.cpp  lights.cpp  main.cpp  mesh.cpp  perlin.cpp  physics.cpp  player_control.cpp  player_controller.cpp  player_ui.cpp  ray_cast.cpp  resource_pack.cpp  sdl2.cpp  shader_program.cpp  terrain.cpp  text_renderer.cpp  texture.cpp  texture_array.cpp  thread_pool.cpp  timer.cpp  window.cpp  world.cpp  world_config.cpp  world_generator.cpp  world_renderer.cpp
src/chunk/: generator.cpp  light_system.cpp  mesher.cpp
src/graphics/: camera.cpp  font.cpp  mesh.cpp  shader_program.cpp  texture.cpp  texture_array.cpp  ui_renderer.cpp  window.cpp  wireframe_renderer.cpp
src/system/: camera_follow.cpp  chunk_generator.cpp  chunk_mesher.cpp  chunk_renderer.cpp  debug.cpp  light.cpp  physics.cpp  player_control.cpp  player_movement.cpp  player_ui.cpp
src/types/: chunk.cpp  dimension.cpp
world/: config.yaml
world/assets/: idk.bbmodel
world/configs/: blocks.yaml  entities.yaml  generation.yaml
